After changing the ground truth generator.

--- a/Mnemosyne.ipynb
+++ b/Mnemosyne.ipynb
@@ -3072,7 +3072,7 @@
         "    DECL_STMT = \"Declarative\" # Type for declarative statements in STM\n",
         "    INTER_STMT = \"Interrogative\" # Type for interrogative statements in STM\n",
         "\n",
-        "    # --- MODIFICATION START ---\n",
+        "    # --- MODIFICATION START --\n",
         "    # NEW: Added a processing stage for LangExtract\n",
         "    STAGE_DOC_TO_STM = \"D2STM\"\n",
         "    STAGE_DOC_TO_LTM = \"D2STM2LTM\"\n",
@@ -3080,7 +3080,7 @@
         "    STAGE_CONSOLIDATE_ONLY = \"CON\"\n",
         "    STAGE_LANGEXTRACT = \"LE\" # LangExtract ground truth generation\n",
         "    PROCESSING_STAGES = [STAGE_DOC_TO_STM, STAGE_DOC_TO_LTM, STAGE_FULL_PROCESS, STAGE_CONSOLIDATE_ONLY, STAGE_LANGEXTRACT]\n",
-        "    # --- MODIFICATION END ---\n",
+        "    # --- MODIFICATION END --\n",
         "\n",
         "    # JSON schema for the knowledge graph output from the LLM\n",
         "    JSON_SCHEMA = '''\n",
@@ -3204,55 +3204,35 @@
         "    # Suffix for the knowledge graph extraction prompt, followed by the text to analyze\n",
         "    Q_KG_SUFFIX = \"Analyze the following text and follow all instructions, especially the creation of `IS_A` relationships for every entity: \"\n",
         "\n",
-        "    # Prompt for LangExtract\n",
-        "    Q_LE = textwrap.dedent(\"\"\"\\\n",
-        "    Extract named entities and relationships in order of appearance.\n",
-        "    Use exact text for extractions. Do not paraphrase or overlap entities.\n",
-        "    Provide meaningful attributes for each entity to add context.\"\"\")\n",
-        "\n",
         "    # --- MODIFICATION START ---\n",
-        "    # NEW: Prompt to transform LangExtract output into Mnemosyne's format\n",
-        "    Q_LANGEXTRACT_TRANSFORM = \"\"\"\n",
-        "    You are an expert data transformation agent. Your task is to convert raw extraction data into the required Mnemosyne JSON format. Follow the instructions precisely.\n",
+        "    # The Q_LE and Q_LANGEXTRACT_TRANSFORM prompts have been replaced by a single, direct prompt.\n",
+        "    Q_LE_DIRECT_TO_MNEMOSYNE = \"\"\"\n",
+        "    You are an expert system that extracts a complete knowledge graph from a given text.\n",
+        "    Your output MUST be a single JSON object that strictly adheres to the provided JSON schema.\n",
+        "    Follow the extraction rules precisely.\n",
         "\n",
-        "    **Instructions:**\n",
+        "    **Extraction Rules:**\n",
         "\n",
-        "    1.  **Process Each Extraction:** For each extraction object in the raw data, you must create two corresponding nodes in the output: an `Instance` node and a `Type` node.\n",
+        "    1.  **Identify Entities:** Find all named entities in the text (e.g., \"Board of Supervisors\", \"Second Class Township Code\").\n",
+        "    2.  **Create Nodes for Each Entity:** For each entity found, you must create two nodes:\n",
+        "        * **Instance Node:** Represents the specific entity.\n",
+        "            * `labels`: Must be `[\"Instance\"]`.\n",
+        "            * `properties.id`: A unique, sequential ID (e.g., \"c0-node-1\", \"c0-node-2\").\n",
+        "            * `properties.name`: The lowercase version of the entity text.\n",
+        "            * `properties.displayName`: The original entity text.\n",
+        "        * **Type Node:** Represents the entity's general class (e.g., \"Governing Body\", \"Legal Citation\").\n",
+        "            * `labels`: Must be `[\"Type\"]`.\n",
+        "            * `properties.id`: A unique ID. Reuse the ID if a type appears more than once.\n",
+        "            * `properties.name`: The lowercase version of the type name.\n",
+        "            * `properties.displayName`: The PascalCase version of the type name.\n",
+        "    3.  **Create Relationships:**\n",
+        "        * **`IS_A` Relationship:** For EVERY Instance Node, you MUST create an `IS_A` relationship connecting it to its corresponding Type Node.\n",
+        "        * **Semantic Relationships:** Identify and create relationships between Instance Nodes (e.g., a \"Board of Supervisors\" `HAS_POWER_TO` \"govern the affairs\").\n",
         "\n",
-        "    2.  **Create Instance Nodes:**\n",
-        "        * The `labels` array for an instance node MUST be `[\"Instance\"]`.\n",
-        "        * The `properties` for an instance node MUST include:\n",
-        "            * A unique sequential `id` (e.g., \"c0-node-0\", \"c0-node-1\", ...).\n",
-        "            * A `name` property, which is the lowercase version of the `extraction_text`.\n",
-        "            * A `displayName` property, which is the original `extraction_text` as a string.\n",
-        "            * All key-value pairs from the `attributes` object in the raw data.\n",
-        "\n",
-        "    3.  **Create Type Nodes:**\n",
-        "        * The `labels` array for a type node MUST be `[\"Type\"]`.\n",
-        "        * The `properties` for a type node MUST include:\n",
-        "            * A unique sequential `id`.\n",
-        "            * A `name` property, which is the lowercase version of the `extraction_class`.\n",
-        "            * A `displayName` property, which is the PascalCase version of the `extraction_class`.\n",
-        "        * Create only one unique Type node for each `extraction_class`. If a type already exists, reuse its ID.\n",
-        "\n",
-        "    4.  **Create `IS_A` Relationships:**\n",
-        "        * For every `Instance` node created, you MUST add an `IS_A` relationship connecting it to its corresponding `Type` node.\n",
-        "\n",
-        "    5.  **Create Semantic Relationships:**\n",
-        "        * After creating all nodes, scan the raw data for any extractions that describe relationships between entities (e.g., `extraction_class` of 'relationship' or where the attributes clearly define a link).\n",
-        "        * For each of these, use its `attributes` to find the source entity text, the target entity text, and the relationship type.\n",
-        "        * Find the `Instance` nodes you already created whose `displayName` properties match the source and target texts.\n",
-        "        * Create a new relationship object using the `id`s of those matching instance nodes and the identified relationship type.\n",
-        "\n",
-        "    6.  **Output Format:** Return ONLY a single JSON object with \"nodes\" and \"relationships\" keys, conforming to the provided JSON schema. Do not add explanations.\n",
-        "\n",
-        "    **JSON Schema:**\n",
-        "    {json_schema}\n",
-        "\n",
-        "    **Raw LangExtract Data:**\n",
-        "    {langextract_data}\n",
+        "    Return ONLY the final JSON object. Do not include any other text or explanations.\n",
         "    \"\"\"\n",
         "    # --- MODIFICATION END ---\n",
+        "\n",
         "\n",
         "    # --- CHANGE: Added JSON Schemas to all refinement prompts ---\n",
         "    # Prompt for merging INSTANCE entities based on semantic similarity\n",
@@ -4713,8 +4693,8 @@
         "\n",
         "    def generate_from_docx(self, source_filepath: Path, output_filepath: Path):\n",
         "        \"\"\"\n",
-        "        Reads a .docx file, extracts entities and relationships using LangExtract,\n",
-        "        transforms the output, and saves it as a normalized JSON file.\n",
+        "        Reads a .docx file, extracts a knowledge graph using LangExtract directly\n",
+        "        into the Mnemosyne format, and saves it as a normalized JSON file.\n",
         "        \"\"\"\n",
         "        with log_step(f\"Generating LangExtract Ground Truth for {source_filepath.name}\"):\n",
         "            try:\n",
@@ -4726,62 +4706,58 @@
         "                    logging.error(\"Source document is empty. Aborting generation.\")\n",
         "                    return\n",
         "\n",
-        "                # 2. Call LangExtract\n",
-        "                logging.info(\"Extracting entities and relations with LangExtract...\")\n",
-        "                prompt = self.config.Q_LE.format\n",
+        "                # 2. Define the prompt and a clear example for LangExtract\n",
+        "                logging.info(\"Extracting knowledge graph with LangExtract in Mnemosyne format...\")\n",
+        "                prompt = self.config.Q_LE_DIRECT_TO_MNEMOSYNE\n",
+        "\n",
+        "                # This example shows LangExtract exactly what the final JSON output should look like.\n",
+        "                example_output_json = {\n",
+        "                    \"nodes\": [\n",
+        "                        {\"id\": \"c0-node-1\", \"labels\": [\"Instance\"], \"properties\": {\"name\": \"board of supervisors\", \"displayName\": \"Board of Supervisors\"}},\n",
+        "                        {\"id\": \"c0-node-2\", \"labels\": [\"Type\"], \"properties\": {\"name\": \"governingbody\", \"displayName\": \"GoverningBody\"}},\n",
+        "                        {\"id\": \"c0-node-3\", \"labels\": [\"Instance\"], \"properties\": {\"name\": \"second class township code\", \"displayName\": \"Second Class Township Code\"}},\n",
+        "                        {\"id\": \"c0-node-4\", \"labels\": [\"Type\"], \"properties\": {\"name\": \"legalcitation\", \"displayName\": \"LegalCitation\"}}\n",
+        "                    ],\n",
+        "                    \"relationships\": [\n",
+        "                        {\"source\": \"c0-node-1\", \"target\": \"c0-node-2\", \"type\": \"IS_A\"},\n",
+        "                        {\"source\": \"c0-node-3\", \"target\": \"c0-node-4\", \"type\": \"IS_A\"}\n",
+        "                    ]\n",
+        "                }\n",
+        "\n",
         "                examples = [\n",
         "                    lx.data.ExampleData(\n",
-        "                        text=\"The Board of Supervisors shall govern the affairs of the township and may make regulations as necessary to provide for the health, safety and welfare of its citizens, as authorized by the Second Class Township Code.\",\n",
+        "                        text=\"The Board of Supervisors shall govern the affairs of the township... as authorized by the Second Class Township Code.\",\n",
         "                        extractions=[\n",
         "                            lx.data.Extraction(\n",
-        "                                extraction_class=\"governing_body\",\n",
-        "                                extraction_text=\"Board of Supervisors\",\n",
-        "                                attributes={\"role\": \"legislative and executive\"}\n",
-        "                            ),\n",
-        "                            lx.data.Extraction(\n",
-        "                                extraction_class=\"corporate_power\",\n",
-        "                                extraction_text=\"govern the affairs of the township\",\n",
-        "                                attributes={\"scope\": \"general governance\"}\n",
-        "                            ),\n",
-        "                            lx.data.Extraction(\n",
-        "                                extraction_class=\"specific_duty\",\n",
-        "                                extraction_text=\"provide for the health, safety and welfare\",\n",
-        "                                attributes={\"category\": \"police power\"}\n",
-        "                            ),\n",
-        "                            lx.data.Extraction(\n",
-        "                                extraction_class=\"legal_citation\",\n",
-        "                                extraction_text=\"Second Class Township Code\",\n",
-        "                                attributes={\"statute\": \"Act of May 1, 1933 (P.L. 103, No. 69)\"}\n",
-        "                            ),\n",
+        "                                extraction_class=\"knowledge_graph\",\n",
+        "                                # LangExtract should generate a single extraction containing the full JSON string.\n",
+        "                                extraction_text=json.dumps(example_output_json, indent=2)\n",
+        "                            )\n",
         "                        ]\n",
         "                    )\n",
         "                ]\n",
-        "                # Note: This is an API call that may take time.\n",
-        "                # The actual langextract library might have different parameters.\n",
-        "                # This is based on the documentation example.\n",
-        "                raw_extraction = lx.extract(\n",
+        "\n",
+        "                # 3. Call LangExtract with schema constraints\n",
+        "                raw_extraction_list = lx.extract(\n",
         "                    text_or_documents=text_content,\n",
         "                    prompt_description=prompt,\n",
         "                    examples=examples,\n",
         "                    model_id=self.llm_service.model_name,\n",
         "                    api_key=self.llm_service.api_key,\n",
-        "                    fence_output=True,\n",
-        "                    use_schema_constraints=False,\n",
+        "                    output_schema=self.config.JSON_SCHEMA, # Enforce the output schema\n",
+        "                    use_schema_constraints=True,\n",
+        "                    fence_output=True\n",
         "                )\n",
         "\n",
-        "                # 3. Transform Output using an LLM\n",
-        "                logging.info(\"Transforming LangExtract output to Mnemosyne format...\")\n",
+        "                if not raw_extraction_list or not raw_extraction_list[0].extraction_text:\n",
+        "                    raise ValueError(\"LangExtract did not return a valid knowledge graph.\")\n",
         "\n",
-        "                prompt = self.config.Q_LANGEXTRACT_TRANSFORM.format(\n",
-        "                    json_schema=self.config.JSON_SCHEMA,\n",
-        "                    langextract_data=str(raw_extraction)\n",
-        "                )\n",
+        "                # The result is the text content of the first (and only) extraction.\n",
+        "                extracted_json_str = raw_extraction_list[0].extraction_text\n",
+        "                final_json = json.loads(extracted_json_str)\n",
         "\n",
-        "                transformed_str = self.llm_service.query_llm(prompt)\n",
-        "                transformed_json = json.loads(transformed_str)\n",
-        "\n",
-        "                # 4. Apply Normalization and Save File\n",
-        "                self._normalize_and_save_json(transformed_json, output_filepath)\n",
+        "                # 4. Apply Final Normalization and Save File\n",
+        "                self._normalize_and_save_json(final_json, output_filepath)\n",
         "\n",
         "            except Exception as e:\n",
         "                logging.error(f\"Failed to generate ground truth file: {e}\", exc_info=True)\n",
