--- a/Mnemosyne.ipynb
+++ b/Mnemosyne.ipynb
@@ -471,6 +471,7 @@
         "    !pip install wordcloud -q\n",
         "    !pip install black[jupyter] -q\n",
         "    !pip install langextract[openai] -q\n",
+        "    !pip install nest_asyncio -q  # <-- ADD THIS LINE\n",
         "    print(\"Package installation complete.\")\n",
         "\n",
         "# --- Universal Imports ---\n",
@@ -501,6 +502,9 @@
         "import langextract as lx\n",
         "import networkx as nx\n",
         "import asyncio\n",
+        "import nest_asyncio  # <-- ADD THIS LINE\n",
+        "\n",
+        "nest_asyncio.apply() # <-- AND ADD THIS LINE\n",
         "\n",
         "\n",
         "# --- Handle Secrets Management ---\n",
@@ -3885,8 +3889,6 @@
         "        logging.info(f\"Mind initialized with model: {llm} / {llm_model}\")\n",
         "\n",
         "\n",
-        "    ### CHANGE START ###\n",
-        "    # This entire method is refactored for clarity and to handle the asyncio event loop correctly.\n",
         "    def doc_to_stm(self, document: Document, use_batch: bool = False):\n",
         "        \"\"\"Processes a document and populates Short-Term Memory.\"\"\"\n",
         "        try:\n",
@@ -3894,28 +3896,17 @@
         "                if self.llm_service.llm == \"OpenAI\":\n",
         "                    self._process_batch_openai(document)\n",
         "                elif self.llm_service.llm == \"Gemini\":\n",
-        "                    # For Jupyter/Colab environments, we need to get the existing event loop\n",
-        "                    try:\n",
-        "                        loop = asyncio.get_running_loop()\n",
-        "                    except RuntimeError:  # 'RuntimeError: There is no current event loop...'\n",
-        "                        loop = asyncio.new_event_loop()\n",
-        "                        asyncio.set_event_loop(loop)\n",
-        "\n",
-        "                    if loop.is_running():\n",
-        "                         # If the loop is already running, we can't use asyncio.run().\n",
-        "                         # We create a task and use a helper to run it.\n",
-        "                        logging.info(\"Detected running event loop. Scheduling async tasks.\")\n",
-        "                        task = loop.create_task(self._process_batch_gemini(document))\n",
-        "                        # This is a simple way to wait for the task in a Jupyter-like env\n",
-        "                        # A more robust solution might use nest_asyncio if this causes issues.\n",
-        "                        loop.run_until_complete(task)\n",
-        "                    else:\n",
-        "                        asyncio.run(self._process_batch_gemini(document))\n",
+        "                    # With nest_asyncio, we can now safely use asyncio.run()\n",
+        "                    asyncio.run(self._process_batch_gemini(document))\n",
         "                else:\n",
         "                    logging.warning(f\"Batch processing not supported for {self.llm_service.llm}. Falling back to synchronous mode.\")\n",
         "                    self._process_synchronous(document)\n",
         "            else:\n",
         "                self._process_synchronous(document)\n",
+        "\n",
+        "        except Exception as e:\n",
+        "            logging.error(f\"An error occurred during doc_to_stm processing: {e}\", exc_info=True)\n",
+        "            raise\n",
         "\n",
         "        except Exception as e:\n",
         "            logging.error(f\"An error occurred during doc_to_stm processing: {e}\", exc_info=True)\n",
@@ -6386,6 +6377,7 @@
       "gpuType": "A100",
       "machine_shape": "hm",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
