Capture LTM Consolidation time.

--- a/Mnemosyne.ipynb
+++ b/Mnemosyne.ipynb
@@ -3893,6 +3893,7 @@
         "        self.output_path = output_path\n",
         "        self.ltm_consolidation_frequency = ltm_consolidation_frequency\n",
         "        self.stm_consolidation_counter = 0\n",
+        "        self.total_consolidation_time = 0.0 # New: Accumulator for consolidation time\n",
         "\n",
         "        # Initialize services and specialized processors\n",
         "        self.llm_service = LLMService(llm, llm_model, llm_api_key, temperature, max_output_tokens)\n",
@@ -4035,8 +4036,12 @@
         "            self.stm_consolidation_counter += 1\n",
         "\n",
         "    def consolidate_ltm(self):\n",
-        "        \"\"\"Starts the LTM consolidation and refinement process.\"\"\"\n",
-        "        self.ltm_consolidator.run_consolidation()"
+        "        \"\"\"Starts the LTM consolidation and refinement process and accumulates the duration.\"\"\"\n",
+        "        consolidation_start_time = datetime.now()\n",
+        "        self.ltm_consolidator.run_consolidation()\n",
+        "        consolidation_end_time = datetime.now()\n",
+        "        duration = (consolidation_end_time - consolidation_start_time).total_seconds()\n",
+        "        self.total_consolidation_time += duration"
       ],
       "metadata": {
         "id": "7An_ndVI-h5I"
@@ -5131,8 +5136,7 @@
         "        node_count, rel_count = 0, 0\n",
         "        doc_data, doc_words_data, kg_data, kg_nodes_data, kg_rels_data, test_result_data = [], [], [], [], [], []\n",
         "        graph_db = None\n",
-        "        # --- NEW: Initialize consolidation duration timer ---\n",
-        "        consolidation_duration_seconds = self.VALUE_NA\n",
+        "        consolidation_duration_seconds = 0.0 # Changed: Initialize to 0.0\n",
         "        a_mind = None # Define a_mind in a higher scope\n",
         "\n",
         "        if self.config.PROCESSING_STAGE == MindConfig.STAGE_LANGEXTRACT:\n",
@@ -5232,16 +5236,14 @@
         "                    self.pre_consolidation_entities = graph_db.reader.get_discovered_entity_count(self.config.EXPERIMENT_ID, self.run_timestamp_str)\n",
         "                    self.pre_consolidation_relationships = graph_db.reader.get_discovered_relationship_count(self.config.EXPERIMENT_ID, self.run_timestamp_str)\n",
         "\n",
+        "                    # Changed: Removed local timer, rely on accumulator in Mind\n",
         "                    if stage == MindConfig.STAGE_FULL_PROCESS:\n",
         "                        is_periodic = a_mind.ltm_consolidation_frequency and a_mind.ltm_consolidation_frequency > 0\n",
         "                        just_ran_ltm = is_periodic and a_mind.stm_consolidation_counter > 0 and a_mind.stm_consolidation_counter % a_mind.ltm_consolidation_frequency == 0\n",
         "\n",
         "                        if not just_ran_ltm:\n",
         "                            logging.info(\"--- Triggering final LTM consolidation run. ---\")\n",
-        "                            consolidation_start_time = datetime.now()\n",
         "                            a_mind.consolidate_ltm()\n",
-        "                            consolidation_end_time = datetime.now()\n",
-        "                            consolidation_duration_seconds = (consolidation_end_time - consolidation_start_time).total_seconds()\n",
         "                        else:\n",
         "                            logging.info(\"--- Skipping final LTM consolidation as a periodic one just completed. ---\")\n",
         "\n",
@@ -5255,13 +5257,14 @@
         "                    word_freq = a_document.get_word_frequencies()\n",
         "                    doc_words_data.extend([{\"DocumentPath\": a_document.get_file_name(), \"RunTimestamp\": self.run_timestamp_str, \"ExperimentID\": self.config.EXPERIMENT_ID, \"Word\": word, \"InstanceCount\": count} for word, count in word_freq.items()])\n",
         "\n",
+        "            # Changed: Removed local timer, rely on accumulator in Mind\n",
         "            elif self.config.PROCESSING_STAGE == MindConfig.STAGE_CONSOLIDATE_ONLY:\n",
         "                logging.info(\"--- Running LTM consolidation only. ---\")\n",
-        "                consolidation_start_time = datetime.now()\n",
         "                a_mind.consolidate_ltm()\n",
-        "                consolidation_end_time = datetime.now()\n",
-        "                consolidation_duration_seconds = (consolidation_end_time - consolidation_start_time).total_seconds()\n",
         "\n",
+        "            # New: Get accumulated time from the Mind instance\n",
+        "            if a_mind:\n",
+        "                consolidation_duration_seconds = a_mind.total_consolidation_time if a_mind.total_consolidation_time > 0 else self.VALUE_NA\n",
         "\n",
         "            self.diagram_generator.generate_entity_word_cloud()\n",
         "            self.diagram_generator.generate_relationship_word_cloud()\n",
@@ -5290,7 +5293,7 @@
         "            \"run_timestamp\": self.run_timestamp_str, \"group_id\": self.config.GROUP_ID, \"experiment_id\": self.config.EXPERIMENT_ID,\n",
         "            \"experiment_name\": self.config.EXPERIMENT_NAME, \"description\": self.config.DESCRIPTION,\n",
         "            \"document_name\": self.config.DOC_FILE_PATH.name if self.config.DOC_FILE_PATH else self.VALUE_NA, \"status\": status,\n",
-        "            \"duration_seconds\": duration.total_seconds(), \"consolidation_duration_seconds\": consolidation_duration_seconds, # --- NEW: Add consolidation time\n",
+        "            \"duration_seconds\": duration.total_seconds(), \"consolidation_duration_seconds\": consolidation_duration_seconds, # Changed: Now uses accumulated value\n",
         "            \"llm_provider\": self.config.LLM_PROVIDER, \"llm_model\": self.config.LLM_MODEL, \"temperature\": self.config.TEMPERATURE,\n",
         "            \"chunk_size\": self.config.DOC_CHUNK_SIZE, \"chunk_overlap\": self.config.DOC_CHUNK_OVERLAP, \"max_chunks_to_process\": self.config.MAX_CHUNKS_TO_PROCESS,\n",
         "            \"max_output_tokens\": self.config.MAX_OUTPUT_TOKENS, \"stm_fullness_threshold\": self.config.STM_FULLNESS_THRESHOLD,\n",
