--- a/Mnemosyne.ipynb
+++ b/Mnemosyne.ipynb
@@ -356,13 +356,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 63,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FBTdy4Ta4Y6S",
-        "outputId": "94dfcca5-7686-4c75-d8ec-3a8af0d07c17"
+        "outputId": "c6ec7f59-6440-4bbf-d4e9-d75a972dfe0e"
       },
       "outputs": [
         {
@@ -426,13 +426,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 64,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dYGILMcJNBGR",
-        "outputId": "69b6e589-e700-46f7-e686-ac3054e0cb4b"
+        "outputId": "28ccd19e-64b5-463e-d6dc-5346be2ce4ff"
       },
       "outputs": [
         {
@@ -543,7 +543,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 65,
       "metadata": {
         "id": "kz_3yOD5IAfM"
       },
@@ -1175,7 +1175,7 @@
       "metadata": {
         "id": "BWtFPZDfv2go"
       },
-      "execution_count": 35,
+      "execution_count": 66,
       "outputs": []
     },
     {
@@ -1189,7 +1189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 67,
       "metadata": {
         "id": "clkDemShJa_t"
       },
@@ -1254,7 +1254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 68,
       "metadata": {
         "id": "MCVYYMEA4hzJ"
       },
@@ -1325,7 +1325,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 69,
       "metadata": {
         "id": "vRqGyyRRmTh9"
       },
@@ -1375,7 +1375,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 70,
       "metadata": {
         "id": "_LuiIAEBm0jI"
       },
@@ -1410,7 +1410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 71,
       "metadata": {
         "id": "UEoq7IHJm_nI"
       },
@@ -1473,7 +1473,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 72,
       "metadata": {
         "id": "6d3RPLqmmjS4"
       },
@@ -1803,7 +1803,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 73,
       "metadata": {
         "id": "3UZHlLrFM_w7"
       },
@@ -2263,7 +2263,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 74,
       "metadata": {
         "id": "QsInh4IFyXnl"
       },
@@ -2493,7 +2493,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 75,
       "metadata": {
         "id": "yRVUUVAjunrK"
       },
@@ -2598,7 +2598,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 76,
       "metadata": {
         "id": "HrKlx_qve7_c"
       },
@@ -2921,7 +2921,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 77,
       "metadata": {
         "id": "NfgPOjFFhpE-"
       },
@@ -3073,7 +3073,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 78,
       "metadata": {
         "id": "jqOvCj8F1r33"
       },
@@ -3469,7 +3469,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 79,
       "metadata": {
         "id": "IVpo7CydwfYp"
       },
@@ -3529,7 +3529,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 80,
       "metadata": {
         "id": "4LMoue7Kwws-"
       },
@@ -3757,7 +3757,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 81,
       "metadata": {
         "id": "jjSLkhrLw7fX"
       },
@@ -4048,7 +4048,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 82,
       "metadata": {
         "id": "madKwS2mqoln"
       },
@@ -4288,12 +4288,12 @@
       "metadata": {
         "id": "7An_ndVI-h5I"
       },
-      "execution_count": 52,
+      "execution_count": 83,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 84,
       "metadata": {
         "id": "s-qABwUs2pnA"
       },
@@ -4423,7 +4423,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 85,
       "metadata": {
         "id": "urhKizid3PHj"
       },
@@ -4534,7 +4534,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 86,
       "metadata": {
         "id": "X0wgs70GClve"
       },
@@ -4999,7 +4999,7 @@
       "metadata": {
         "id": "djg0IVctsb4m"
       },
-      "execution_count": 56,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -5013,7 +5013,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 88,
       "metadata": {
         "id": "FlJJltyoaxn2"
       },
@@ -5128,7 +5128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 89,
       "metadata": {
         "id": "Dk64HrKmI1tQ"
       },
@@ -5452,21 +5452,34 @@
         "            # Determine if we need to run the document processing workflow\n",
         "            run_doc_processing = self.config.PROCESSING_STAGE not in [MindConfig.STAGE_LOAD_FROM_DUMP, MindConfig.STAGE_LOAD_FROM_DUMP_RPT, MindConfig.STAGE_CONSOLIDATE_ONLY]\n",
         "\n",
-        "            a_mind = Mind(\n",
-        "                llm=self.config.LLM_PROVIDER, llm_model=self.config.LLM_MODEL,\n",
-        "                temperature=self.config.TEMPERATURE, max_output_tokens=self.config.MAX_OUTPUT_TOKENS,\n",
-        "                graph_db=graph_db, llm_api_key=self.config.LLM_API_KEY,\n",
-        "                stm_threshold=self.config.STM_FULLNESS_THRESHOLD,\n",
-        "                ltm_merge_sample_size=self.config.LTM_MERGE_SAMPLE_SIZE,\n",
-        "                ltm_hierarchy_sample_size=self.config.LTM_HIERARCHY_SAMPLE_SIZE,\n",
-        "                max_chunks_to_process=self.config.MAX_CHUNKS_TO_PROCESS,\n",
-        "                num_refinement_cycles=self.config.NUM_REFINEMENT_CYCLES,\n",
-        "                experiment_id=self.config.EXPERIMENT_ID, run_timestamp=self.run_timestamp_str,\n",
-        "                part_of_sample_size=self.config.PART_OF_SAMPLE_SIZE,\n",
-        "                part_of_candidate_pool_size=self.config.PART_OF_CANDIDATE_POOL_SIZE,\n",
-        "                output_path=self.config.OUTPUT_PATH,\n",
-        "                ltm_consolidation_frequency=self.config.LTM_CONSOLIDATION_FREQUENCY\n",
-        "            )\n",
+        "            # --- FIX: Conditionally initialize Mind ---\n",
+        "            # Define stages that do not require the main Mind/LLM workflow.\n",
+        "            llm_independent_stages = [\n",
+        "                MindConfig.STAGE_LOAD_FROM_DUMP,\n",
+        "                MindConfig.STAGE_LOAD_FROM_DUMP_RPT,\n",
+        "                MindConfig.STAGE_LANGEXTRACT\n",
+        "            ]\n",
+        "\n",
+        "            a_mind = None # Initialize a_mind to None\n",
+        "\n",
+        "            # Only create a Mind instance if the stage is NOT LLM-independent.\n",
+        "            if self.config.PROCESSING_STAGE not in llm_independent_stages:\n",
+        "                a_mind = Mind(\n",
+        "                    llm=self.config.LLM_PROVIDER, llm_model=self.config.LLM_MODEL,\n",
+        "                    temperature=self.config.TEMPERATURE, max_output_tokens=self.config.MAX_OUTPUT_TOKENS,\n",
+        "                    graph_db=graph_db, llm_api_key=self.config.LLM_API_KEY,\n",
+        "                    stm_threshold=self.config.STM_FULLNESS_THRESHOLD,\n",
+        "                    ltm_merge_sample_size=self.config.LTM_MERGE_SAMPLE_SIZE,\n",
+        "                    ltm_hierarchy_sample_size=self.config.LTM_HIERARCHY_SAMPLE_SIZE,\n",
+        "                    max_chunks_to_process=self.config.MAX_CHUNKS_TO_PROCESS,\n",
+        "                    num_refinement_cycles=self.config.NUM_REFINEMENT_CYCLES,\n",
+        "                    experiment_id=self.config.EXPERIMENT_ID, run_timestamp=self.run_timestamp_str,\n",
+        "                    part_of_sample_size=self.config.PART_OF_SAMPLE_SIZE,\n",
+        "                    part_of_candidate_pool_size=self.config.PART_OF_CANDIDATE_POOL_SIZE,\n",
+        "                    output_path=self.config.OUTPUT_PATH,\n",
+        "                    ltm_consolidation_frequency=self.config.LTM_CONSOLIDATION_FREQUENCY\n",
+        "                )\n",
+        "            # --- END FIX ---\n",
         "\n",
         "            if self.config.PROCESSING_STAGE in [MindConfig.STAGE_LOAD_FROM_DUMP, MindConfig.STAGE_LOAD_FROM_DUMP_RPT]:\n",
         "                with log_step(\"Loading KG from dump file\"):\n",
@@ -5613,7 +5626,7 @@
       "metadata": {
         "id": "ne592r-4qT8O"
       },
-      "execution_count": 59,
+      "execution_count": 90,
       "outputs": []
     },
     {
@@ -5996,7 +6009,7 @@
       "metadata": {
         "id": "5VnLTXPTkrh7"
       },
-      "execution_count": 60,
+      "execution_count": 91,
       "outputs": []
     },
     {
@@ -6163,7 +6176,7 @@
       "metadata": {
         "id": "ozfjACkyFjxh"
       },
-      "execution_count": 61,
+      "execution_count": 92,
       "outputs": []
     },
     {
@@ -6178,13 +6191,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 93,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Yp7sEX5GT2BE",
-        "outputId": "d18500c9-f325-41ac-be2a-3736b33037f6"
+        "outputId": "b8f35a9c-eedf-4332-f912-73526c277c54"
       },
       "outputs": [
         {
@@ -6196,7 +6209,7 @@
             "INFO - Neo4j connection closed.\n",
             "INFO - Neo4j connection successful.\n",
             "INFO - --- Starting Experiment Run: 15 groups defined ---\n",
-            "INFO - Run ID: RUN_2025-09-19_16-33-33\n",
+            "INFO - Run ID: RUN_2025-09-19_16-40-30\n",
             "INFO - ==================================================================================================================================\n",
             "INFO - EVALUATING GROUP: Utility: Environment Cleanup (GRP001)\n",
             "INFO - Executing utility task: Clearing database.\n",
@@ -6244,26 +6257,44 @@
             "INFO - SKIPPING group 'Primary Use Case: Legal Document Analysis' because 'run_group' is False.\n",
             "INFO - ==================================================================================================================================\n",
             "INFO - EVALUATING GROUP: Utility: Load Graph from Dump (GRP901)\n",
-            "INFO - Workflow for GRP901EXP001 FAILED: Invalid LLM Provider: 'None'.\n",
+            "INFO - Configuration for 'GRP901EXP001' validated successfully.\n",
+            "INFO - Successfully connected to Neo4j database.\n",
+            "INFO - Neo4j database cleared.\n",
+            "INFO - An unexpected error occurred during LLMService initialization: Unknown LLM: None\n",
+            "INFO - Workflow for GRP901EXP001 FAILED: Unknown LLM: None\n",
             "Traceback (most recent call last):\n",
-            "  File \"/tmp/ipython-input-280437676.py\", line 174, in run\n",
-            "    self._validate_config()\n",
-            "  File \"/tmp/ipython-input-280437676.py\", line 42, in _validate_config\n",
-            "    raise ValueError(f\"Invalid LLM Provider: '{self.config.LLM_PROVIDER}'.\")\n",
-            "ValueError: Invalid LLM Provider: 'None'.\n",
-            "INFO - Workflow for GRP901EXP002 FAILED: Invalid LLM Provider: 'None'.\n",
+            "  File \"/tmp/ipython-input-2913704529.py\", line 196, in run\n",
+            "    a_mind = Mind(\n",
+            "             ^^^^^\n",
+            "  File \"/tmp/ipython-input-2503324416.py\", line 22, in __init__\n",
+            "    self.llm_service = LLMService(llm, llm_model, llm_api_key, temperature, max_output_tokens)\n",
+            "                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/tmp/ipython-input-1274175589.py\", line 47, in __init__\n",
+            "    raise ValueError(f\"Unknown LLM: {self.llm}\")\n",
+            "ValueError: Unknown LLM: None\n",
+            "INFO - Neo4j connection closed.\n",
+            "INFO - Configuration for 'GRP901EXP002' validated successfully.\n",
+            "INFO - Successfully connected to Neo4j database.\n",
+            "INFO - Neo4j database cleared.\n",
+            "INFO - An unexpected error occurred during LLMService initialization: Unknown LLM: None\n",
+            "INFO - Workflow for GRP901EXP002 FAILED: Unknown LLM: None\n",
             "Traceback (most recent call last):\n",
-            "  File \"/tmp/ipython-input-280437676.py\", line 174, in run\n",
-            "    self._validate_config()\n",
-            "  File \"/tmp/ipython-input-280437676.py\", line 42, in _validate_config\n",
-            "    raise ValueError(f\"Invalid LLM Provider: '{self.config.LLM_PROVIDER}'.\")\n",
-            "ValueError: Invalid LLM Provider: 'None'.\n",
-            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-33-33/GRP901_Utility__Load_Graph_from_Dump/default_filename.csv\n",
+            "  File \"/tmp/ipython-input-2913704529.py\", line 196, in run\n",
+            "    a_mind = Mind(\n",
+            "             ^^^^^\n",
+            "  File \"/tmp/ipython-input-2503324416.py\", line 22, in __init__\n",
+            "    self.llm_service = LLMService(llm, llm_model, llm_api_key, temperature, max_output_tokens)\n",
+            "                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/tmp/ipython-input-1274175589.py\", line 47, in __init__\n",
+            "    raise ValueError(f\"Unknown LLM: {self.llm}\")\n",
+            "ValueError: Unknown LLM: None\n",
+            "INFO - Neo4j connection closed.\n",
+            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-40-30/GRP901_Utility__Load_Graph_from_Dump/default_filename.csv\n",
             "INFO - ==================================================================================================================================\n",
             "INFO - ALL EXPERIMENTS COMPLETED\n",
-            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-33-33/00_master_run_summary.csv\n",
-            "INFO - Successfully saved LaTeX summary to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-33-33/08_run_summary.tex\n",
-            "INFO - --- Run RUN_2025-09-19_16-33-33 finished ---\n"
+            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-40-30/00_master_run_summary.csv\n",
+            "INFO - Successfully saved LaTeX summary to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-40-30/08_run_summary.tex\n",
+            "INFO - --- Run RUN_2025-09-19_16-40-30 finished ---\n"
           ]
         },
         {
@@ -6272,9 +6303,9 @@
           "text": [
             "\n",
             "--- MASTER EXPERIMENT RUN SUMMARY ---\n",
-            "  group_id experiment_id                    experiment_name   status  duration_seconds  consolidation_duration_seconds ground_truth_source overall_score entity_f1_score relationship_f1_score                          error\n",
-            "0   GRP901  GRP901EXP001             Load GRP201EXP001 Dump  Failure          0.002355                             0.0                 N/A           N/A             N/A                   N/A  Invalid LLM Provider: 'None'.\n",
-            "1   GRP901  GRP901EXP002  Load GRP201EXP001 Dump and Report  Failure          0.001401                             0.0                 N/A           N/A             N/A                   N/A  Invalid LLM Provider: 'None'.\n"
+            "  group_id experiment_id                    experiment_name   status  duration_seconds  consolidation_duration_seconds ground_truth_source overall_score entity_f1_score relationship_f1_score              error\n",
+            "0   GRP901  GRP901EXP001             Load GRP201EXP001 Dump  Failure          1.615025                             0.0                 N/A           N/A             N/A                   N/A  Unknown LLM: None\n",
+            "1   GRP901  GRP901EXP002  Load GRP201EXP001 Dump and Report  Failure          1.614747                             0.0                 N/A           N/A             N/A                   N/A  Unknown LLM: None\n"
           ]
         }
       ],
